[package]
name = "yummy-user-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
flexi_logger = "0.27.4"
log = "0.4.20"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getset = "0.1.2"
derive-new = "0.6.0"
once_cell = "1.20.2"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
rdkafka = { version = "0.37", features = ["tokio", "sasl"] }
async-trait = "0.1.83"